k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: recipe-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: recipe-backend

  template:
    metadata:
      labels:
        app: recipe-backend

    spec:

      containers:
      - name: backend

        image: aaghash/recipe-backend:v2
        
        imagePullPolicy: Always

        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: recipe-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
