k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: recipe-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: recipe-frontend

  template:
    metadata:
      labels:
        app: recipe-frontend

    spec:
      containers:
      - name: frontend

        image: aaghash/recipe-frontend:v1

        imagePullPolicy: Always
        
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  selector:
    app: recipe-frontend

  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30001

  type: NodePort
