k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jenkins
  namespace: jenkins

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jenkins

  template:
    metadata:
      labels:
        app: jenkins

    spec:
      serviceAccountName: jenkins

      containers:
      - name: jenkins

        image: jenkins/jenkins:lts

        securityContext:
          privileged: true
          runAsUser: 0

        ports:
        - containerPort: 8080

        - containerPort: 50000

        command:
        - /bin/bash
        - -c
        - |
          apt update && \
          apt install -y docker.io curl && \
          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
          install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && \
          /usr/local/bin/jenkins.sh

        volumeMounts:
        - name: jenkins-storage
          mountPath: /var/jenkins_home

        - name: docker-sock
          mountPath: /var/run/docker.sock

      volumes:
      - name: jenkins-storage
        persistentVolumeClaim:
          claimName: jenkins-pvc

      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock

---
apiVersion: v1
kind: Service

metadata:
  name: jenkins-service
  namespace: jenkins

spec:
  selector:
    app: jenkins

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000

  type: NodePort
